--- a/introduction.mdx
+++ b/introduction.mdx
@@ -17,24 +17,24 @@ WaveAssist helps you create, run, and automate Python-based workflows — whethe
 ### Core Concepts
 
 <CardGroup cols={2}>
-  <Card title="Nodes" icon="diagram-project" href="./core-concepts/nodes">
-    Python scripts that represent tasks (like “generate fortune” or “send email”)
-  </Card>
-  <Card title="Data" icon="database" href="./core-concepts/data">
-    Manage variables and data securely across workflows
-  </Card>
-  <Card title="Packages" icon="box" href="./core-concepts/packages">
-    Add and manage dependencies for your workflows
-  </Card>
-  <Card title="Environments" icon="cubes" href="./core-concepts/environments">
-    Configure and manage different runtime environments
-  </Card>
-  <Card title="Deployments" icon="cloud" href="./core-concepts/deployments">
-    Run and monitor workflows in live environments
-  </Card>
-  <Card title="Logs" icon="file-lines" href="./core-concepts/logs">
-    Debug and monitor workflows with detailed execution logs
-  </Card>
+	<Card title="Nodes" icon="diagram-project" href="./core-concepts/nodes">
+		Python scripts that represent tasks (like “generate fortune” or “send email”)
+	</Card>
+	<Card title="Data" icon="database" href="./core-concepts/data">
+		Manage variables and data securely across workflows
+	</Card>
+	<Card title="Packages" icon="box" href="./core-concepts/packages">
+		Add and manage dependencies for your workflows
+	</Card>
+	<Card title="Environments" icon="cubes" href="./core-concepts/environments">
+		Configure and manage different runtime environments
+	</Card>
+	<Card title="Deployments" icon="cloud" href="./core-concepts/deployments">
+		Run and monitor workflows in live environments
+	</Card>
+	<Card title="Logs" icon="file-lines" href="./core-concepts/logs">
+		Debug and monitor workflows with detailed execution logs
+	</Card>
 </CardGroup>
 
 ---
@@ -44,12 +44,14 @@ WaveAssist helps you create, run, and automate Python-based workflows — whethe
 WaveAssist is built for modern builders who want to automate workflows without worrying about infrastructure.
 
 ### For Developers:
+
 - Write simple Python functions as modular nodes
 - Easily connect logic in sequence or parallel
 - Test and debug directly from the dashboard
 - Scale up with variables, triggers, and environments
 
 ### For Teams:
+
 - Collaborate in shared projects
 - Monitor runs, logs, and results in real-time
 - Keep logic version-controlled and modular
@@ -57,20 +59,10 @@ WaveAssist is built for modern builders who want to automate workflows without w
 
 Whether you're a solo hacker or an engineering team — WaveAssist adapts to your style of building.
 
----
-
-## How It Works: A Simple Diagram
-
-Here's a basic overview of how WaveAssist runs your workflow:
-
-<Frame caption="Basic Workflow Diagram (Conceptual)">
-  <img src="/images/how_it_works_WaveAssist.png" alt="Workflow diagram" />
-</Frame>
-
-This modular design lets you build simple scripts or complex systems — all in the same tool.
-
----
-
-## What’s Next?
+## How to get started?
 
 Head over to the [Quickstart Guide](./quickstart) to build your first project in minutes using our Fortune Generator example!
+
+<Card title="Quick Start" icon="rocket" href="./quickstart">
+	Start your journey by building a simple pipeline with WaveAssist
+</Card>
