--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Get started with WaveAssist in minutes'
+title: "Quickstart"
+description: "Get started with WaveAssist in minutes"
 ---
 
 # Quickstart: Build Your First Workflow
@@ -12,6 +12,7 @@ Welcome to WaveAssist! Let’s build a simple workflow to get you started. In th
 ## What You’ll Build
 
 **Goal**: Create a workflow that:
+
 1. Randomly selects a fortune.
 2. Logs the fortune to the console.
 
@@ -23,12 +24,17 @@ Welcome to WaveAssist! Let’s build a simple workflow to get you started. In th
 2. Click the **Add Project** button.
 3. Fill in the project details:
    - **Project Name**: `Daily Fortune`
-   - **Project Key**: `daily_fortune` (A unique identifier used for project-wide activities and API integrations.)
+   - **Project Key**: `daily-fortune` (A unique identifier used for project-wide activities and API integrations.)
 4. Click **Create**.
 
 <Frame caption="Create a New Project">
-  <img src="/images/create_project_popup.png" alt="Create Project Popup" />
+	<img src="/images/create_project_popup.png" alt="Create Project Popup" />
 </Frame>
+
+5. Go inside your project and view your keys from the keys section.
+   <Frame caption="Create a New Project">
+   	<img src="/images/your-keys.png" alt="Your Keys" />
+   </Frame>
 
 ---
 
@@ -39,98 +45,137 @@ Nodes are Python scripts that represent tasks in your workflow. Let’s create a
 1. Open your project and click **Add Node**.
 2. Fill in the node details:
    - **Node Name**: `Choose Fortune`
-   - **File Name**: `choose_fortune.py`
+   - **Enabled**: 'Enabled'
    - **Starting Node**: Check this box to make it the starting node of the workflow.
-3. Paste the following code into the editor:
-
-```python
-import random
-import pandas as pd
-import waveassist
-
-# Define a DataFrame with fortunes
-fortunes_df = pd.DataFrame({
-    "fortune": [
-        "Today is your lucky day!",
-        "Curiosity leads to breakthroughs.",
-        "Take a deep breath and smile.",
-        "Be bold. Fortune favors the brave!"
-    ]
-})
-
-# Randomly select a fortune
-selected_fortune = fortunes_df.sample(1).iloc[0]['fortune']
-
-# Store the selected fortune in the Data tab
-waveassist.store_data('daily_fortune', selected_fortune)
-
-# Fetch the stored fortune to confirm
-retrieved_fortune = waveassist.fetch_data('daily_fortune')
-print(f"Selected Fortune: {retrieved_fortune}")
-```
-
-4. Click **Save**.
+   - **Interval**: Cron to run it every morning at 8:30 am of your timezone.
 
 <Frame caption="Create and Edit Node">
-  <img src="/images/create_edit_node.png" alt="Create/Edit Node Popup" />
+	<img src="/images/create_edit_node.png" alt="Create/Edit Node Popup" />
 </Frame>
+
+3. Click Save, and then click on `View Code`.
+
+4. Paste the following code into the editor: _Dont forget to replace your uid in the code_
+
+```python
+# Import the WaveAssist SDK to interact with your project
+import waveassist
+
+# Initialize the WaveAssist client with your unique project UID and name
+# Replace <your-uid-here> with your actual UID
+waveassist.init('<your-uid-here>', 'daily-fortune')
+
+# Define a list of fortune messages to be stored
+fortunes = [
+    "Today is your lucky day!",
+    "Curiosity leads to breakthroughs.",
+    "Take a deep breath and smile.",
+    "Be bold. Fortune favors the brave!",
+    "Patience is a virtue.",
+    "Every day is a fresh start."
+]
+
+# Store the list of fortunes in WaveAssist’s data storage under the key 'fortunes'
+waveassist.store_data('fortunes', fortunes)
+
+# Print confirmation with the stored fortunes
+print("Stored Fortunes:", fortunes)
+```
 
 ---
 
-## Step 3: Add a Node to Log the Fortune
+## Step 3: Add another Node to Log the Fortune
 
 Now, let’s create another node to log the fortune.
 
 1. Click **Add Node** again.
 2. Fill in the node details:
    - **Node Name**: `Log Fortune`
-   - **File Name**: `log_fortune.py`
+   - **Enabled**: 'Enabled'
    - **Run After Nodes**: Select `Choose Fortune` from the list to ensure this node runs after the `Choose Fortune` node.
-3. Paste the following code into the editor:
+     <Frame caption="Log Fortune Node">
+     	<img src="/images/log_fortune_node.png" alt="Log Fortune Node" />
+     </Frame>
+3. Click Save, and then click on `View Code`. Paste the following code into the editor:
 
 ```python
 import waveassist
+import random
 
-# Fetch the stored fortune from the Data tab
-retrieved_fortune = waveassist.fetch_data('daily_fortune')
+# Initialize the WaveAssist client using your project UID and name
+# Replace <your-uid-here> with your actual UID
+waveassist.init('<your-uid-here>', 'daily-fortune')
 
-# Log the fortune to the console
-print("🧿 Your fortune:", retrieved_fortune)
+# Fetch the list of stored fortunes from WaveAssist's data storage
+fortunes = waveassist.fetch_data('fortunes')
+
+# Select a random fortune for today
+today_fortune = random.choice(fortunes)
+
+# Display the selected fortune
+print("Your fortune for today:", today_fortune)
+
+# Save for future work
+waveassist.store_data('today_fortune',today_fortune)
 ```
 
 4. Click **Save**.
-
-<Frame caption="Log Fortune Node">
-  <img src="/images/log_fortune_node.png" alt="Log Fortune Node" />
-</Frame>
 
 ---
 
 ## Step 4: Run the Workflow
 
 1. Once the nodes are created, press the **Play** button on the **Starting Node** from the project dashboard.
+   <Frame caption="Log Fortune Node">
+   	<img src="/images/workflow_run.png" alt="workflow_run" />
+   </Frame>
 2. Open the **Logs** section to see the output.
 
 You should see something like this:
+
 ```
-🧿 Your fortune: Today is your lucky day!
+Your fortune for today: Today is your lucky day!
 ```
 
 <Frame caption="Workflow Log Output">
-  <img src="/images/workflow.png" alt="Workflow Logs" />
+	<img src="/images/logs.png" alt="Workflow Logs" />
 </Frame>
+
+---
+
+## Step 5: Deploy the Workflow
+
+To ensure your workflow runs every day at the scheduled time, you must deploy it.
+
+1. Click on the **Deploy** button in the project dashboard. Enter version code and deploy.
+   <Frame caption="Deploy">
+   	<img src="/images/deploy.png" alt="deploy" />
+   </Frame>
+2. Navigate to the **Deployments** section to verify that your workflow is successfully deployed.
+   <Frame caption="Deployments">
+   	<img src="/images/deployment.png" alt="Deployments" />
+   </Frame>
+
+Now your code will auto run every day as the cron schedule and print your fortune!🎉
+
+Want this fortune to be mailed you you everyday, follow along to the next section to expand the project to receive daily fortune emails!
 
 ---
 
 ## What’s Next?
 
 Want to expand your project? Here are some ideas:
+
 - **Send the fortune via email**: Use the WaveAssist email integration.
 - **Post to Slack**: Connect your workflow to Slack.
 - **Add logic**: Categorize fortunes as funny, motivational, or serious.
 - **Generate fortunes with AI**: Use OpenAI to create dynamic fortunes.
 
 Check out the full guide: [Expand Your Fortune Project →](./whats-next)
+
+<Card title="Expand Your Fortune Project" icon="arrow-right" href="./whats-next">
+	Enhance your fortune project to receive daily fortune emails directly in your inbox!
+</Card>
 
 ---
 
