--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -31,10 +31,7 @@ Welcome to WaveAssist! Let’s build a simple workflow to get you started. In th
 	<img src="/images/create_project_popup.png" alt="Create Project Popup" />
 </Frame>
 
-5. Go inside your project and view your keys from the keys section.
-   <Frame caption="Create a New Project">
-   	<img src="/images/your-keys.png" alt="Your Keys" />
-   </Frame>
+5. Go inside your project and download your keys to use for next steps.
 
 ---
 
@@ -55,7 +52,7 @@ Nodes are Python scripts that represent tasks in your workflow. Let’s create a
 
 3. Click Save, and then click on `View Code`.
 
-4. Paste the following code into the editor: _Dont forget to replace your uid in the code_
+4. Paste the following code into the editor: _Dont forget to replace your uid in the code - download by clicking on Download Keys_
 
 ```python
 # Import the WaveAssist SDK to interact with your project
