--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,11 +14,35 @@ WaveAssist helps you create, run, and automate Python-based workflows — whethe
 - Use AI to summarize, generate, or process content
 - Run periodic background logic with zero infra hassle
 
-### Core Concepts
+---
 
-<CardGroup cols={2}>
+## Benefits for Developers
+
+WaveAssist is built for modern builders who want to automate workflows without worrying about infrastructure.
+
+### Benefits:
+
+- Write simple Python functions as modular nodes
+- Easily connect logic in sequence or parallel
+- Test and debug directly from the dashboard
+- Scale up with variables, triggers, and environments
+- Integrate with APIs, CRON jobs, webhooks, or LLMs
+
+Whether you're a solo hacker or an engineering team — WaveAssist adapts to your style of building.
+
+## How to get started?
+
+Head over to the [Quickstart Guide](./quickstart) to build your first project in minutes using our Fortune Generator example!
+
+<Card title="Quick Start" icon="rocket" href="./quickstart">
+	Start your journey by building a simple pipeline with WaveAssist
+</Card>
+
+## WaveAssist Core Concepts Reference
+
+<CardGroup cols={3}>
 	<Card title="Nodes" icon="diagram-project" href="./core-concepts/nodes">
-		Python scripts that represent tasks (like “generate fortune” or “send email”)
+		Python scripts that represent tasks
 	</Card>
 	<Card title="Data" icon="database" href="./core-concepts/data">
 		Manage variables and data securely across workflows
@@ -36,32 +60,6 @@ WaveAssist helps you create, run, and automate Python-based workflows — whethe
 		Debug and monitor workflows with detailed execution logs
 	</Card>
 </CardGroup>
-
----
-
-## Benefits for Developers and Teams
-
-WaveAssist is built for modern builders who want to automate workflows without worrying about infrastructure.
-
-### For Developers:
-
-- Write simple Python functions as modular nodes
-- Easily connect logic in sequence or parallel
-- Test and debug directly from the dashboard
-- Scale up with variables, triggers, and environments
-
-### For Teams:
-
-- Collaborate in shared projects
-- Monitor runs, logs, and results in real-time
-- Keep logic version-controlled and modular
-- Integrate with APIs, CRON jobs, webhooks, or LLMs
-
-Whether you're a solo hacker or an engineering team — WaveAssist adapts to your style of building.
-
-## How to get started?
-
-Head over to the [Quickstart Guide](./quickstart) to build your first project in minutes using our Fortune Generator example!
 
 <Card title="Quick Start" icon="rocket" href="./quickstart">
 	Start your journey by building a simple pipeline with WaveAssist
