--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -32,6 +32,9 @@ Welcome to WaveAssist! Let’s build a simple workflow to get you started. In th
 </Frame>
 
 5. Go inside your project and download your keys to use for next steps.
+   <Frame caption="Download Keys">
+   	<img src="/images/download-keys.png" alt="Download Keys" />
+   </Frame>
 
 ---
 
