--- a/core-concepts/data.mdx
+++ b/core-concepts/data.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Data"
+title: "Variables"
 description: "Learn about managing data and variables in WaveAssist."
 ---
 
-The **Data** section in WaveAssist allows you to manage variables and view data used in your workflows. You can create, update, and delete variables, as well as inspect and manage data directly from the dashboard.
+The **Variables** section in WaveAssist allows you to manage variables and view data used in your workflows. You can create, update, and delete variables, as well as inspect and manage data directly from the dashboard.
 
 ## Managing Variables
 
@@ -34,7 +34,7 @@ WaveAssist supports the following data types for variables:
   "This is a string value"
   ```
 
-## Viewing and Managing Data
+## Viewing and Managing Variables
 
 The **Data Viewer** allows you to inspect and manage the data used in your workflows. You can filter, view, and export data directly from the dashboard.
 
