--- a/introduction.mdx
+++ b/introduction.mdx
@@ -44,7 +44,7 @@ Head over to the [Quickstart Guide](./quickstart) to build your first project in
 	<Card title="Nodes" icon="diagram-project" href="./core-concepts/nodes">
 		Python scripts that represent tasks
 	</Card>
-	<Card title="Data" icon="database" href="./core-concepts/data">
+	<Card title="Variables" icon="database" href="./core-concepts/data">
 		Manage variables and data securely across workflows
 	</Card>
 	<Card title="Packages" icon="box" href="./core-concepts/packages">
