--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,11 +5,23 @@ description: "Get started with WaveAssist in minutes"
 
 # Quickstart: Build Your First Workflow
 
-Welcome to WaveAssist! Let’s build a simple workflow to get you started. In this guide, we’ll create a project that generates a daily fortune and logs it.
+Welcome to WaveAssist! There are two ways to get started:
+
+1. **Use a Template**: Get started instantly with our [pre-built templates](/api-reference/template/templates) like [GitZoid](/api-reference/template/gitzoid) for AI-powered PR reviews.
+2. **Build from Scratch**: Follow this guide to create a simple workflow that generates a daily fortune.
 
 ---
 
-## What You’ll Build
+## Option 1: Deploy a Template
+
+1. Visit our [Templates section](/api-reference/template/templates)
+2. Choose a template that fits your needs
+3. Click the "Deploy with WaveAssist" button
+4. Follow the template-specific setup instructions
+
+---
+
+## Option 2: Build a Simple Workflow
 
 **Goal**: Create a workflow that:
 
