--- a/core-concepts/templates.mdx
+++ b/core-concepts/templates.mdx
@@ -3,7 +3,9 @@ title: 'Templates'
 description: 'Learn how to use WaveAssist templates to quickly deploy production-ready workflows'
 ---
 
-**Templates** in WaveAssist allow you to quickly deploy production-ready workflows and AI apps with a single click. They serve as pre-configured starting points for your projects, saving you time and ensuring best practices are followed.
+**Templates** in WaveAssist allow you to quickly deploy production-ready workflows and AI apps with a single click. They serve as pre-configured starting points for your projects, saving you time and ensuring best practices are followed. 
+
+Check out our [Templates](https://waveassist.io/templates) for more information.
 
 ## What are Templates?
 
@@ -18,12 +20,12 @@ Templates are production-ready configurations that include:
 1. Navigate to the Templates section in your WaveAssist dashboard
 2. Browse available templates
 3. Select a template that matches your needs
-4. Click "Use Template" to create a new project based on the template
+4. Click "Deploy with WaveAssist" to create a new project based on the template
 5. Customize the configuration as needed
 
-## Available Templates
+## Few Examples of Templates
 
-WaveAssist offers several templates for common use cases:
+WaveAssist offers several templates for different use cases:
 
 - **GitZoid**: Git repository analysis and automation 
 - **BrandTrace**: Brand monitoring and analytics
@@ -36,3 +38,5 @@ After deploying a template, you can:
 - Add or remove nodes
 - Update environment variables
 - Customize integrations
+
+Start using templates today! [Check out our templates](https://waveassist.io/templates).
