--- a/whats-next.mdx
+++ b/whats-next.mdx
@@ -78,4 +78,4 @@ From this foundation, you can build:
 - An SMS notifier to send fortunes via text.
 - A morale booster for your team with personalized messages.
 
-Explore more in [Core Concepts](../core-concepts/nodes) or check out other [Examples](https://github.com/WaveAssist/waveassist).
+You can also use [Templates](../core-concepts/templates) for pre-configured production-ready workflows.
