--- a/api-reference/sdk/initialization.mdx
+++ b/api-reference/sdk/initialization.mdx
@@ -21,8 +21,8 @@ pip install waveassist
 import waveassist
 
 waveassist.init(
-    token="your-api-token",
-    project_key="your-project-id"
+    "your-api-token",
+    "your-project-key"
 )
 ```
 
@@ -32,9 +32,9 @@ You can also specify an environment when initializing the SDK:
 
 ```python
 waveassist.init(
-    token="your-api-token",
-    project_key="your-project-id",
-    environment_key="production"  # defaults to <project_key>_default
+    "your-api-token",
+    "your-project-key",
+    "production"  # defaults to <project_key>_default
 )
 ```
 
