--- a/faq.mdx
+++ b/faq.mdx
@@ -99,28 +99,30 @@ Find answers to common questions about WaveAssist, including workflows, nodes, d
 
 ---
 
-## Advanced Features
+## Assistants
 
 <AccordionGroup>
-  <Accordion icon="robot" title="Can I use AI models in my workflows?">
-    Yes! WaveAssist supports integration with AI models like OpenAI and Anthropic. You can:
-    - Generate text or predictions using OpenAI's GPT models.
-    - Fetch API keys from the **Data** tab for secure integration.
-    - Use AI nodes to automate tasks like content generation, summarization, or classification.
+  <Accordion icon="sparkles" title="What are WaveAssist Assistants?">
+    Assistants are pre-configured, production-ready workflows that you can deploy instantly. They:
+    - Come with best-practice implementations
+    - Include optimized settings and configurations
+    - Can be customized to match your specific needs
   </Accordion>
 
-  <Accordion icon="cloud" title="How do deployments work?">
-    Deployments allow you to run workflows in live environments. You can:
-    - Deploy workflows to production with a single click.
-    - Monitor deployments in real-time using the **Logs** section.
-    - Use environment-specific configurations for seamless transitions between development, staging, and production.
+  <Accordion icon="rocket" title="How do I get started with Assistants?">
+    Getting started with Assistants is easy:
+    - Browse our [Assistants gallery](https://waveassist.io/assistants)
+    - Click "Deploy with WaveAssist" on your chosen assistant
+    - Follow the setup instructions
+    - Customize the configuration as needed
   </Accordion>
 
-  <Accordion icon="sync" title="Can I integrate with external APIs?">
-    Yes, WaveAssist makes it easy to integrate with external APIs. You can:
-    - Use API integration nodes to fetch or send data.
-    - Store API keys securely in the **Data** tab.
-    - Write custom Python scripts to handle API requests and responses.
+  <Accordion icon="gear" title="Can I customize an Assistant?">
+    Yes! After deploying an assistant, you can:
+    - Modify workflow configurations
+    - Add or remove nodes
+    - Update environment variables
+    - Customize the implementation to match your needs
   </Accordion>
 </AccordionGroup>
 
@@ -137,6 +139,6 @@ Find answers to common questions about WaveAssist, including workflows, nodes, d
   </Accordion>
 
   <Accordion icon="help" title="Where can I find more examples?">
-    Visit the [WaveAssist GitHub Repository](https://github.com/WaveAssist/waveassist) for detailed examples and templates to help you get started.
+    Visit the [WaveAssist GitHub Repository](https://github.com/WaveAssist/waveassist) for detailed examples and assistants to help you get started.
   </Accordion>
 </AccordionGroup>
