--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -7,17 +7,17 @@ description: "Get started with WaveAssist in minutes"
 
 Welcome to WaveAssist! There are two ways to get started:
 
-1. **Use a Template**: Get started instantly with our [pre-built templates](/api-reference/template/templates) like [GitZoid](/api-reference/template/gitzoid) for AI-powered PR reviews.
+1. **Use an Assistant**: Get started instantly with our [pre-built assistants](/api-reference/assistants) like [GitZoid](/api-reference/assistants/gitzoid) for AI-powered PR reviews.
 2. **Build from Scratch**: Follow this guide to create a simple workflow that generates a daily fortune.
 
 ---
 
-## Option 1: Deploy a Template
+## Option 1: Deploy an Assistant
 
-1. Visit our [Templates section](/api-reference/template/templates)
-2. Choose a template that fits your needs
+1. Visit our [Assistants section](/api-reference/assistants)
+2. Choose an assistant that fits your needs
 3. Click the "Deploy with WaveAssist" button
-4. Follow the template-specific setup instructions
+4. Follow the assistant-specific setup instructions
 
 ---
 
