--- a/whats-next.mdx
+++ b/whats-next.mdx
@@ -78,4 +78,4 @@ From this foundation, you can build:
 - An SMS notifier to send fortunes via text.
 - A morale booster for your team with personalized messages.
 
-You can also use [Templates](../core-concepts/templates) for pre-configured production-ready workflows.
+You can also use [Assistants](../core-concepts/assistants) for pre-configured production-ready workflows.
