--- a/whats-next.mdx
+++ b/whats-next.mdx
@@ -21,40 +21,24 @@ Add a new node `Send Email`:
 3. Paste the following code into the editor:
 
 ```python
-import smtplib
-from email.message import EmailMessage
 import waveassist
 
-# Replace <your-uid-here> with your actual UID
+# Initialize WaveAssist with your credentials
 waveassist.init('<your-uid-here>', 'daily-fortune')
-
-# Fetch email credentials from the Data tab
-# Note: If using Gmail, you may need to enable "App Passwords" or allow less secure apps.
-# For more information, visit: https://support.google.com/accounts/answer/185833
-email_user = 'your_email@gmail.com'
-email_password = 'your_password'
-recipient_email = 'recipient_email@gmail.com'
 
 # Fetch the stored fortune from the Data tab
 today_fortune = waveassist.fetch_data('today_fortune')
 
-# Create the email message
-msg = EmailMessage()
-msg.set_content(f"Your Fortune: {today_fortune}")
-msg["Subject"] = "Your Daily Fortune"
-msg["From"] = email_user
-msg["To"] = recipient_email
-
-# Send the email
-with smtplib.SMTP("smtp.gmail.com", 587) as server:
-    server.starttls()
-    server.login(email_user, email_password)
-    server.send_message(msg)
+# Send the fortune via email
+waveassist.send_mail(
+    subject="Your Daily Fortune",
+    html_content=f"<p>Your Fortune: {today_fortune}</p>"
+)
 
 print("Email sent successfully!")
 ```
 
-4. Store your email credentials as variables in the **Data** section of the dashboard.
+4. Make sure you have configured your email settings in the WaveAssist dashboard.
 5. Click **Save**.
 
 ---
